fixes dollar/euro button spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,6 +56,10 @@ a:hover{
   margin-top: .3em !important;
   margin-bottom: 1em !important;
 }
+#currency-button{
+  /*margin-top: .3em !important;*/
+  margin-bottom: .6em !important;
+}
 /*.table-responsive{
     overflow-x: auto;
 }*/
